# npe2-adoption-tracker

./: .gitignore  Cargo.toml  README.md
src/: main.rs
src/data/: 24jun22.csv  plugin_repos_until_2022-06-01.csv  repos_created_after_2022-01-17.csv  repos_created_after_2022-02-01.csv  through-2022-06-02.csv
