[package]
name = "npe2-adoption-tracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio= {version="1",features=["full"]}
reqwest={version = "0.11", features = ["json"] }
anyhow= "1"
serde_json= "1"
chrono="0.4"
futures= "0.3"